# cf-framework

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  entrypoint.sh  rustfmt.toml
api/: Cargo.toml  README.md
api/src/: main.rs
api/src/config/: custom_error.rs  mod.rs
api/src/dto/: posts.rs
api/src/handlers/: posts.rs  users.rs
api/src/services/: posts.rs  users.rs
api/src/structs/: follow.rs  mod.rs  user.rs
api/src/validators/: mod.rs
cf-api/: Cargo.toml
cf-api/src/: main.rs
cf-api/src/config/: actix_error.rs  database.rs
cf-api/src/dto/: posts.rs  users.rs
cf-api/src/handlers/: posts.rs  users.rs
cf-api/src/helpers/: generators.rs
cf-api/src/routes/: mod.rs  posts.rs  routes.rs  users.rs
cf-api/src/services/: posts.rs  users.rs
cf-api/src/structs/: affiliate.rs  generals.rs  news.rs  response_api.rs
cf-entity/: Cargo.toml
cf-entity/src/entity/: mod.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
cf-entity/src/util/: mod.rs  post_generate.rs
cf-migration/: Cargo.toml  README.md
cf-migration/src/: m20250101_000001_create_table_users.rs  m20250101_000002_create_table_posts.rs
cf-repository/: Cargo.toml
cf-repository/src/: lib.rs
cf-repository/src/helpers/: generator.rs  mod.rs  parser_converter.rs
cf-repository/src/repositories/: mod.rs  posts_repository.rs  users_repository.rs
cf-repository/src/structs/: mod.rs
cf-repository/src/templates/: repository.tera
cf-util/: Cargo.toml  README.md
cf-util/src/: lib.rs  s3.rs  tiptap.rs
entity/: Cargo.toml  README.md
entity/src/entity/: posts.rs
k8s/: README.md  configmap.yaml  deploy.sh  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
migration/: Cargo.toml
migration/src/: lib.rs
repository/: Cargo.toml  README.md
repository/src/repositories/: posts_repository.rs  users_repository.rs
repository/src/structs/: table_structs.rs
util/: Cargo.toml
util/src/: sanitize.rs
