[workspace]
resolver = "2"
members = [
    "cf-api",
    "cf-entity",
    "cf-migration",
    "cf-repository",
    "cf-util",
]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
actix-web = "4"
sea-orm = { version = "2.0.0-rc.19", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
utoipa = { version = "5", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
bytes = "1.10.1"
aws-sdk-s3 = "1.103.0"
serde_json = "1.0.147"
chrono = "0.4"
