[package]
name = "cf-api"
version = "0.1.0"
edition = "2024"

[dependencies]
common-auth = { git = "ssh://git@github.com/Crypto-Foundation-Dev/common-auth.git", features = [
    "actix",
], tag = "v0.3.4" }
# common-auth = { path = "../../common-auth", features = ["actix"] } /// For local development
cf-migration = { path = "../cf-migration" }
cf-repository = { path = "../cf-repository" }
cf-util = { path = "../cf-util" }
cf-entity = { path = "../cf-entity" }
sea-orm = { workspace = true }
dotenvy = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
bytes = { workspace = true }
aws-sdk-s3 = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v4"] }
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
