[package]
name = "cf-repository"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
cf-entity = {path = "../cf-entity"}
cf-util = {path="../cf-util"}
syn = {version = "2.0", features = ["full", "parsing"]}
tera = "1.19"
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = {workspace = true}
chrono = { workspace = true }