[package]
name = "cf-util"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = {version = "1.8.5", features = ["behavior-version-latest"]}
uuid = { version = "1.19.0", features = ["v4"] }
ammonia = "4.1"
bytes = {workspace = true}
aws-sdk-s3 = {workspace = true}
maplit = "1.0.2"
serde_json = {workspace = true}