[package]
name = "migration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1.89"

[dependencies.sea-orm-migration]
version = "2.0.0-rc.19"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]
